fix:  align application template metadata and notification styles
(cherry picked from commit 1e35cc22a8560dd1d607b70464dcff81292a5209)

--- a/gravitee-apim-console-webui/src/components/gio-metadata/gio-metadata.component.scss
+++ b/gravitee-apim-console-webui/src/components/gio-metadata/gio-metadata.component.scss
@@ -27,6 +27,6 @@
 }
 
 .mat-column-actions {
-  width: 1%;
-  padding: 0 4px;
+  width: 120px;
+  max-width: 120px;
 }
